# namy-clone

./: README.md
domain-checker/: Cargo.toml  servers.json
domain-checker-frontend/: package-lock.json  package.json
domain-checker-frontend/src/: App.jsx  index.css
domain-checker-frontend/src/components/: DomainList.jsx  Logo.jsx  SearchInput.jsx
domain-checker/app/: index.html
domain-checker/app/assets/: index-DKUS2ZDF.js  index-QqPxMyxh.css
domain-checker/src/: main.rs
domain-checker/src/model/: query.rs
