[package]
name = "domain-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1",  features = ["json","tls"]} 
serde = { version = "1.0", features = ["derive"] }  

reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

dotenv = "0.15"

whois-rust = "1.6.0"

